chore: bump version to 2.0.0 for release

--- a/addon/manifest.ini
+++ b/addon/manifest.ini
@@ -1,8 +1,8 @@
 name = LionEvolutionPro
 summary = "LION Evolution Pro - Advanced OCR for NVDA"
-version = 2.0.0-dev
+version = 2.0.0
 author = "Nemex81 <your-email@example.com>, based on work by Stefan Moisei"
 description = "Live OCR with application-specific profiles. Based on LION by vortex1024."
 docFileName = readme.htm
 minimumNVDAVersion = 2024.1.0
-lastTestedNVDAVersion = 2025.1.0
+lastTestedNVDAVersion = 2025.3.2
